[gd_scene load_steps=16 format=3 uid="uid://b3vkmfxunohh8"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_le4us"]
[ext_resource type="Resource" uid="uid://pv664px4lo6y" path="res://FasterMovementData.tres" id="2_w6hny"]
[ext_resource type="Texture2D" uid="uid://bhastabn6b6oc" path="res://sprites/Undead Uprising Dom Walking-export1.png" id="3_pyaag"]
[ext_resource type="PackedScene" uid="uid://cx875k0hb43t4" path="res://hud.tscn" id="4_4b8ah"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q27sk"]
atlas = ExtResource("3_pyaag")
region = Rect2(0, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_5oxaf"]
atlas = ExtResource("3_pyaag")
region = Rect2(32, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe1ct"]
atlas = ExtResource("3_pyaag")
region = Rect2(16, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_irwvq"]
atlas = ExtResource("3_pyaag")
region = Rect2(48, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f2s3"]
atlas = ExtResource("3_pyaag")
region = Rect2(64, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyry5"]
atlas = ExtResource("3_pyaag")
region = Rect2(80, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmb18"]
atlas = ExtResource("3_pyaag")
region = Rect2(96, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xsck"]
atlas = ExtResource("3_pyaag")
region = Rect2(112, 0, 16, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_dg80j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q27sk")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5oxaf")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q27sk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe1ct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5oxaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irwvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f2s3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyry5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmb18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xsck")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ognu"]
size = Vector2(12, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fq1oj"]
size = Vector2(8, 14)

[node name="Player" type="CharacterBody2D"]
collision_layer = 3
floor_constant_speed = true
floor_snap_length = 2.0
safe_margin = 0.1
script = ExtResource("1_le4us")
movement_data = ExtResource("2_w6hny")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_dg80j")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_0ognu")

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="WallJumpTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2.08165e-12, -20)
zoom = Vector2(1.2, 1.2)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="HazardDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardDetector"]
visible = false
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_fq1oj")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(6, -9)

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="PlayerHUD" parent="." instance=ExtResource("4_4b8ah")]

[connection signal="area_entered" from="HazardDetector" to="." method="_on_hazard_detector_area_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
